--- a/css/main.css
+++ b/css/main.css
@@ -288,7 +288,35 @@ body {
       width: 100%;
       height: 25%; }
       #home-background .nav-panel .nav-list {
-        display: none; }
+        display: none;
+        position: fixed;
+        z-index: 1;
+        height: 100vh;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        transition: 0.9s;
+        opacity: 0.9; }
+        #home-background .nav-panel .nav-list a:nth-child(2) {
+          margin-top: 100px; }
+        #home-background .nav-panel .nav-list a {
+          -webkit-justify-content: center;
+          -ms-flex-pack: center;
+          justify-content: center;
+          font-size: 20px;
+          margin: 60px; }
+          #home-background .nav-panel .nav-list a span {
+            display: none; }
+        #home-background .nav-panel .nav-list .closebtn {
+          position: absolute;
+          top: 0;
+          right: 25px;
+          font-size: 36px;
+          margin-left: 50px;
+          cursor: pointer;
+          margin: 40px; }
     #home-background #home {
       width: 100%;
       height: 50%;
@@ -308,11 +336,9 @@ body {
   #about-background {
     height: 100vh;
     border-top: 8px solid orange; }
-    #about-background .nav-panel {
-      width: 100%;
-      height: 25%; }
-      #about-background .nav-panel .nav-list {
-        display: none; }
+    #about-background .nav-panel .nav-list {
+      display: none;
+      opacity: 0; }
     #about-background #about {
       width: 100%;
       height: 50%;
@@ -475,7 +501,8 @@ body {
       width: 100%;
       height: 25%; }
       #contact-background .nav-panel .nav-list {
-        display: none; }
+        display: none;
+        opacity: 0; }
     #contact-background #contact-1 {
       width: 100%;
       height: 50%;
@@ -543,7 +570,35 @@ body {
       width: 100%;
       height: 25%; }
       #home-background .nav-panel .nav-list {
-        display: none; }
+        display: none;
+        position: fixed;
+        z-index: 1;
+        height: 100vh;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background-color: #111;
+        overflow-x: hidden;
+        transition: 0.9s;
+        opacity: 0.9; }
+        #home-background .nav-panel .nav-list a:nth-child(2) {
+          margin-top: 100px; }
+        #home-background .nav-panel .nav-list a {
+          -webkit-justify-content: center;
+          -ms-flex-pack: center;
+          justify-content: center;
+          font-size: 20px;
+          margin: 60px; }
+          #home-background .nav-panel .nav-list a span {
+            display: none; }
+        #home-background .nav-panel .nav-list .closebtn {
+          position: absolute;
+          top: 0;
+          right: 25px;
+          font-size: 36px;
+          margin-left: 50px;
+          cursor: pointer;
+          margin: 40px; }
     #home-background #home {
       width: 100%;
       height: 50%;
@@ -567,7 +622,8 @@ body {
       width: 100%;
       height: 25%; }
       #about-background .nav-panel .nav-list {
-        display: none; }
+        display: none;
+        opacity: 0; }
     #about-background #about {
       width: 100%;
       height: 50%;
@@ -819,7 +875,8 @@ body {
       width: 100%;
       height: 25%; }
       #contact-background .nav-panel .nav-list {
-        display: none; }
+        display: none;
+        opacity: 0; }
     #contact-background #contact-1 {
       width: 100%;
       height: 50%;
@@ -886,6 +943,8 @@ body {
     #home-background .nav-panel {
       width: 100%;
       height: 25%; }
+      #home-background .nav-panel .nav-list .closebtn {
+        display: none; }
       #home-background .nav-panel .hamburger-menu {
         display: none; }
     #home-background #home {
@@ -1297,7 +1356,8 @@ body {
       text-align: left;
       text-decoration: none;
       background: transparent;
-      color: white; }
+      color: white;
+      cursor: pointer; }
   .nav-panel .nav-list {
     height: 50%;
     width: 24%; }
@@ -1312,6 +1372,7 @@ body {
       -ms-flex-align: center;
       align-items: center;
       text-decoration: none;
+      cursor: pointer;
       color: white; }
       .nav-panel .nav-list a .line {
         width: 20%;
@@ -1344,5 +1405,7 @@ body {
       height: 2px;
       content: " ";
       background-color: white; }
+
+/* ---- NAV ---- */
 
 /*# sourceMappingURL=main.css.map */
