--- a/sass/effects/_menu.scss
+++ b/sass/effects/_menu.scss
@@ -28,6 +28,9 @@
             text-decoration: none;
             background: transparent;
             color: white;
+
+            cursor: pointer;
+
         }
 
     }
@@ -39,12 +42,12 @@
         height: 50%;
         width: 24%;
         //background-color: gray;
-
         a {
             display: flex;
             justify-content: flex-end;
             align-items: center;
             text-decoration: none;
+            cursor: pointer;
             color: white;
 
             .line {
@@ -59,6 +62,7 @@
                     background-color: orange;
                 }
                 color: orange;
+
             }
         }
     }
@@ -85,3 +89,5 @@
         }
 
 }
+
+    /* ---- NAV ---- */
