--- a/sass/media/_large.scss
+++ b/sass/media/_large.scss
@@ -15,7 +15,11 @@ $large: "(min-width: 1024px)";
         width: 100%;
         height: 25%;
         //background-color: blue;
-
+        .nav-list{
+            .closebtn {
+                display: none;
+            }
+        }
         .hamburger-menu {
             display: none;
         }
