--- a/sass/media/_medium.scss
+++ b/sass/media/_medium.scss
@@ -17,6 +17,41 @@ $medium: "(min-width: 768px) and (max-width: 1023px)";
 
         .nav-list {
             display: none;
+            position: fixed;
+            z-index: 1;
+            height: 100vh;
+            width: 100%;
+            top: 0;
+            left: 0;
+
+            background-color: #111;
+
+            overflow-x: hidden;
+            transition: 0.9s;
+            opacity: 0.9;
+
+            a:nth-child(2) {
+                margin-top: 100px;
+            }
+
+            a {
+                justify-content: center;
+                font-size: 20px;
+                margin: 60px;
+
+                span {
+                    display: none;
+                }
+            }
+            .closebtn {
+                position: absolute;
+                top: 0;
+                right: 25px;
+                font-size: 36px;
+                margin-left: 50px;
+                cursor: pointer;
+                margin: 40px;
+            }
         }
     }
 
@@ -49,6 +84,7 @@ $medium: "(min-width: 768px) and (max-width: 1023px)";
 
         .nav-list {
             display: none;
+            opacity: 0;
         }
     }
 
@@ -305,6 +341,7 @@ $medium: "(min-width: 768px) and (max-width: 1023px)";
 
         .nav-list {
             display: none;
+            opacity: 0;
         }
     }
 
